# lua-cmake-sandbox

./: CMakeLists.txt
lib/: call_lib_test.lua  lib_test.c
src/: add.lua  call_c_function.c  call_c_function.lua  call_lua_function.c  hello.c
